--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,10 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
-
-
     <!--tools:layout="@layout/activity_main"-->
-
 
     <fragment
         android:id="@+id/map"
@@ -34,7 +31,7 @@
         app:layout_constraintVertical_bias="0.051" />
 
     <Button
-        android:id="@+id/increase"
+        android:id="@+id/increaseBtn"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_marginEnd="25dp"
@@ -47,27 +44,27 @@
         app:layout_constraintVertical_bias="0.672" />
 
     <Button
-        android:id="@+id/decrease"
+        android:id="@+id/decreaseBtn"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:layout_marginEnd="25dp"
+        android:layout_marginEnd="24dp"
         android:background="@drawable/rectangle_button"
         android:text="-"
         android:textSize="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.775" />
+        app:layout_constraintVertical_bias="0.773" />
 
     <Button
-        android:id="@+id/init"
+        android:id="@+id/resetBtn"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:background="@drawable/rectangle_button"
         android:text="리셋"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.939"
+        app:layout_constraintHorizontal_bias="0.928"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.876" />
@@ -85,7 +82,7 @@
         app:layout_constraintVertical_bias="0.997" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/homeBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="홈"
@@ -97,7 +94,7 @@
         app:layout_constraintVertical_bias="0.997" />
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/settingBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="설정"
